force-app/main/default/objects/Lead/fields/Preferred_Contact_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time_From__c</fullName>
    <label>Preferred Contact Time From</label>
    <type>Time</type>
</CustomField>