force-app/main/default/objects/Lead/fields/Preferred_Contact_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time_To__c</fullName>
    <label>Preferred Contact Time To</label>
    <type>Time</type>
</CustomField>