force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area_of_Interest__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_interest</valueSetName>
    </valueSet>
</CustomField>